update for PickerView

--- a/BeautyGallery/Base.lproj/Main.storyboard
+++ b/BeautyGallery/Base.lproj/Main.storyboard
@@ -42,6 +42,9 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <connections>
+                        <outlet property="beautyPicker" destination="XvD-8n-hjh" id="TC0-Ny-cbD"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
@@ -65,7 +68,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qGd-yV-jrc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="503" y="327"/>
+            <point key="canvasLocation" x="673" y="330"/>
         </scene>
     </scenes>
     <resources>
